@@ -1,0 +1,2 @@
+Import foreign statistical formats into R via the embedded 'ReadStat'
+C library, <https://github.com/WizardMac/ReadStat>.
