@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/07/31 13:45:24 brook Exp $
+
+SHA1 (R/haven_2.1.1.tar.gz) = 1d280fb57d8a275a79bf1b1b06ffc30b901cdb0b
+RMD160 (R/haven_2.1.1.tar.gz) = 6c3e39fc84d04ce968ffdb354f6e62b0d4624d82
+SHA512 (R/haven_2.1.1.tar.gz) = 6cc812a93f5fe5b9bd8895b90a480ebda55295fb699ab7d0a3ae0ccead6678b400e7f69da014af487d63f6438107b22a0581469202771f20a05f3f7aa52037c6
+Size (R/haven_2.1.1.tar.gz) = 265123 bytes
