@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3120 2019/07/31 13:43:55 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3121 2019/07/31 13:45:24 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5077,3 +5077,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added sysutils/R-progress version 1.2.2 [brook 2019-07-31]
 	Added textproc/R-cellranger version 1.1.0 [brook 2019-07-31]
 	Added textproc/R-data.table version 1.12.2 [brook 2019-07-31]
+	Added textproc/R-haven version 2.1.1 [brook 2019-07-31]
